--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="AhNqrh3G4deoeeUxGXGeqVWF0k94E1wjZIbnxtZW/Mt/rhyXVGGN4D2LRV/PgF9LEajjG2xZB47i0hQlSK1S5MeCErH8xugrHvUQhbZqaQTsA5ShBj81Joe974Tdzh6Q.f0hbFoObPR/Oaoo4rXsYAtnk+xfYRaz2rTsl4FYk1GkBY7RTQfqQbZ5Nz6pioy/8HGjSoqowaZ5NrZ+kxtVBFmONAMaul0fFkcAAxmz5HA0uxX0pZfRmCdx5xpD/ljxr">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HPXt3gDVgI/0Ri4lvDPtcYAQzsiyZYM3r5wT88qzOGTOgBqKbJQRRGd2KPOHkMTVWNrJLNsJgVnKUz3LF+nnxJPXonKDfPbwt9lnEFVEQgU2361fEgjd8W1hGYdLJu3p.ztaXimxJiE2+4WFZFu8UfS7x6i+6a8NPr/zqdK1yQLJSn5iE9Z3cug/ARjvDXELGns1QAxfNANf0ZpKSICBElMtfERI11BL7XiA8itaVNGLrfOACtC7a26HJPg36R/6i">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
