--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gONkcsp2SEyzGp67jxcNjpuqLIrDDYkmOhExYpYxrel+ffEYW0+vGDPh23ONnmlLHrdauCa/9vfxoDg5UkAU+qH9lzzeJ6z2xHAEFDHBBSulssfkdstfwjrL8waMMwlr.0xDF3JHvW83log+kTt0RTfuAqOKSDpgFr3YB+UhVY1uyPfH58A9043N+cec8ZBvNqBaBuOkfKOhpfqruktM5Fy2lfatr9k4wEMLLaAe6WsEYx03Ag80thch/QoHv7Lc1">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Qs/fDI727MPNySb7KGHczcSY08PfYZSurjBlyeyFAINZff/2PZ/eNhztVF2cu8ccuP5oDjpe0NhUd7UsRjib2k2BBvbaFchJC5jAaB+zkWJuHgD/lfoYl+G0OoGfhgc+.hViue7FAGgvejAYznwyJkoRT8sjCS3qEvKPBrvbS6/aYASXGkX6n76PW/d3xOYaiQBIlEVoyEQe275ezepZjcxZxF8iQH1c9NyRDP3noL3WPyMvYM1Bl7f35SuXwlY+d">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
