--- a/tools.html
+++ b/tools.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -135,7 +135,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background16.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background117.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
@@ -150,7 +150,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background27.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background218.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -165,7 +165,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background38.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background319.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -180,7 +180,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background49.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background420.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
