--- a/JobAdd.html
+++ b/JobAdd.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zxAbxohcjkaec2khsxqIzNE52MWQqiSofdFocCmujij3hIbypHbRWfkSV0M3T1+negs5DDkKFdqe+R3BegArAmY2Ov7FoUJ8jNoITbcK9jO0nDIQXkJzPEZWJYwBQhq/.QahVKCBUPi/t2Gyc7mkYY6srwqWhEv6e6lwIGItsdSdYPeN5C32s6OqvOi1Xx6PwMOI/SX8ojev0ospe8/0CoynT4+97csSQlPrPbusTiA7V1/8giUlO/HWTwaM714Zh">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4A4hf7ipEOPMZBct2RCs6MpgfOV78yBCCsaA41Y98PVaoN/v2J9bMmGZ1qgvRczyWvlz8OblyISYD4gdgJoLW+/YG9F2Ulo2Sui81hvFIjbxAnZD5yBqbOpi5lzsUjoO.2vv83xmgcrdUEAlm5sOwEic4GNeG7bsMmlr43PEQcLp79Ibq24o8txtokJiEfkTmYs6VYEYYhLWMCzoe84fMntph7Kr20onwu/tZ1O6Fml/QX2D3hLycobgRBotIwr4F">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
