--- a/Local.html
+++ b/Local.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-56">
 
     
 
@@ -484,7 +484,7 @@
     </div>
 </section>
 
-<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="432" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-wowslider-container mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-wowslider-container--silence" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="false" id="wowslider-7t" data-rv-view="11321" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-wowslider">
         <div class="ws_images">
             <ul>
