--- a/training.html
+++ b/training.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
