--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FdYM52BWiV2W9Gzhu7zkHnmgDofbEumey+EkSul2jc5dPWYQovMUViN6VwH1fmuwsGg96bw0hRIQGoAm/OrtetP0gN6Wgliep0Dk93QdBv2mXpscZ0BUPPEMxZ1FlOUj.Jos7GKTblc8VSFbWVu6K91qHxtmWcLYXfsXU0wdfWaoPkyBg4Nx6BBCPIlDhA6hL8rUHi4kErX+HDQIbN+5hTLhDFpxtJ6OoP9exV+0g+qyxjUBeQZPEwGWk3lOjwm9w">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WmBQzraDEtQr1BsWh2NQJodJychJ1C/wIXBH+PKSN/u41YfVCf+qE31cCOy7eaNjcDVl5/uUjAU3lVL9zOV/8OTt5Q9fCYJOeAaNVpW6jA7qGit2z6Iv6MTVstHh1XJv.tYGkNo8KY2mkY+YTURSTi2wv1oVv065WUSOy52lxOHLidu0+GRnUG3Uu77CMjAAxTC1o3OywEjeJxLAhOwxAJqghq5lIHVv5ehz+IYWnrxc8//FTTlKhIcjFpVUEAz5G">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
