--- a/JobAdd.html
+++ b/JobAdd.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4A4hf7ipEOPMZBct2RCs6MpgfOV78yBCCsaA41Y98PVaoN/v2J9bMmGZ1qgvRczyWvlz8OblyISYD4gdgJoLW+/YG9F2Ulo2Sui81hvFIjbxAnZD5yBqbOpi5lzsUjoO.2vv83xmgcrdUEAlm5sOwEic4GNeG7bsMmlr43PEQcLp79Ibq24o8txtokJiEfkTmYs6VYEYYhLWMCzoe84fMntph7Kr20onwu/tZ1O6Fml/QX2D3hLycobgRBotIwr4F">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="tP0jpqbs5rGlgIKUDiqdBbBZkWHxB9IBQVsw/WLX5RHXNd3rHhpS6KSeMNuhxFpITCXEEnY8Ei0KimAaQMOx9I3G47+Rf6QuBLMT34flXRA/xrdG1zLD/mvpcTk3dtO8.mRoH6DQc+T1cPzrixOFlj1otb/o1Gl8nItiwtKVWdtLIgdiLZFWiI3naisaOnhGJ5sBCo4+jV6odPR8pc7DFZ9IK7Hk7BHM5Yhqt9WXQvpxa713HcC7r7oagUGbn7a+z">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
